Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+
           <h1 id="project_title">Ingénieur DevOps</h1>
           <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
+
         </header>
     </div>
 
@@ -38,13 +41,34 @@ aurelien.campergue@gmail.com
 <a name="2014---2010--thales-services--projet-dune-42-mois" class="anchor" href="#2014---2010--thales-services--projet-dune-42-mois"><span class="octicon octicon-link"></span></a>2014 - 2010  Thales Services – Projet Dune (42 mois)</h2>
 
 <hr><h3>
-<a name="gestion-du-parc-des-postes-de-d%C3%A9veloppement" class="anchor" href="#gestion-du-parc-des-postes-de-d%C3%A9veloppement"><span class="octicon octicon-link"></span></a>Gestion du parc des postes de développement</h3>
+<a name="r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me" class="anchor" href="#r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me"><span class="octicon octicon-link"></span></a>Référent intégration logicielle et système</h3>
 
 <ul>
-<li>Création de masters de postes de développement ; <em>Ubuntu (10.04, 11.04, 12.04, 13.04) ; Mint (14,15) ; Debian (6.0, 7.0)</em>
+<li>Responsable de l'architecture Maven de l'ensemble des modules du projet</li>
+<li>Responsable de la qualité des versions du système (releases mensuelles)</li>
+<li>Support aux équipes de développement </li>
+</ul><h3>
+<a name="packaging-int%C3%A9gration-et-industrialisation-des-d%C3%A9ploiements" class="anchor" href="#packaging-int%C3%A9gration-et-industrialisation-des-d%C3%A9ploiements"><span class="octicon octicon-link"></span></a>Packaging, intégration et industrialisation des déploiements</h3>
+
+<ul>
+<li>Mise en place de projets Maven de packaging applicatif au format Debian <em>(Jdeb)</em>
 </li>
-<li>Mise en place d'une infrastructure de clonage de masse <em>(Clonezilla)</em> et Déploiement des postes à la demande</li>
-<li>Inventaire de parc informatique automatisé <em>(OCS Inventory NG, GLPi)</em>
+<li>Industrialisation des déploiements applicatifs basés sur les paquets Debian</li>
+<li>Industrialisation des configurations de plateforme</li>
+<li>Mise en place d'un processus de déploiement continu incluant un paramétrage spécifique de plateforme</li>
+<li>Mise en place d'une architecture de gestion de logs <em>(Logstash)</em>
+</li>
+<li>Mise en place d'une architecture de supervision des performances <em>(Munin)</em>
+</li>
+</ul><h3>
+<a name="plateforme-dint%C3%A9gration-et-de-tests-" class="anchor" href="#plateforme-dint%C3%A9gration-et-de-tests-"><span class="octicon octicon-link"></span></a>Plateforme d'intégration et de tests :</h3>
+
+<ul>
+<li>Installation et configuration de plus de 30 hyperviseurs <em>(VMWare ESXi pendant plus de 2 ans, KVM depuis 1 an)</em>
+</li>
+<li>Gestion de nombreuses plateformes virtualisée <em>(environ 10 plateformes, 40 serveurs par plateformes)</em>
+</li>
+<li>Déploiement hebdomadaires de plateformes complètes, OS et applicatif <em>(40 VM, 35 Jboss, 2 Postgresql, 2 Cassandra, 10 Redis, 2 ActiveMQ, 4 lemonldap-ng)</em>
 </li>
 </ul><h3>
 <a name="mise-en-place-et-maintien-en-condition-op%C3%A9rationnelle-dune-plateforme-de-d%C3%A9veloppement-logiciel-" class="anchor" href="#mise-en-place-et-maintien-en-condition-op%C3%A9rationnelle-dune-plateforme-de-d%C3%A9veloppement-logiciel-"><span class="octicon octicon-link"></span></a>Mise en place et maintien en condition opérationnelle d'une plateforme de développement logiciel :</h3>
@@ -67,35 +91,14 @@ aurelien.campergue@gmail.com
 <li>Authentification centralisée <em>(OpenLDAP)</em>
 </li>
 </ul><h3>
-<a name="plateforme-dint%C3%A9gration-et-de-tests-" class="anchor" href="#plateforme-dint%C3%A9gration-et-de-tests-"><span class="octicon octicon-link"></span></a>Plateforme d'intégration et de tests :</h3>
+<a name="gestion-du-parc-des-postes-de-d%C3%A9veloppement" class="anchor" href="#gestion-du-parc-des-postes-de-d%C3%A9veloppement"><span class="octicon octicon-link"></span></a>Gestion du parc des postes de développement</h3>
 
 <ul>
-<li>Installation et configuration de plus de 30 hyperviseurs <em>(VMWare ESXi pendant plus de 2 ans, KVM depuis 1 an)</em>
+<li>Création de masters de postes de développement ; <em>Ubuntu (10.04, 11.04, 12.04, 13.04) ; Mint (14,15) ; Debian (6.0, 7.0)</em>
 </li>
-<li>Gestion de nombreuses plateformes virtualisée <em>(environ 10 plateformes, 40 serveurs par plateformes)</em>
+<li>Mise en place d'une infrastructure de clonage de masse <em>(Clonezilla)</em> et Déploiement des postes à la demande</li>
+<li>Inventaire de parc informatique automatisé <em>(OCS Inventory NG, GLPi)</em>
 </li>
-<li>Déploiement hebdomadaires de plateformes complètes, OS et applicatif <em>(40 VM, 35 Jboss, 2 Postgresql, 2 Cassandra, 10 Redis, 2 ActiveMQ, 4 lemonldap-ng)</em>
-</li>
-</ul><h3>
-<a name="packaging-int%C3%A9gration-et-industrialisation-des-d%C3%A9ploiements" class="anchor" href="#packaging-int%C3%A9gration-et-industrialisation-des-d%C3%A9ploiements"><span class="octicon octicon-link"></span></a>Packaging, intégration et industrialisation des déploiements</h3>
-
-<ul>
-<li>Mise en place de projets Maven de packaging applicatif au format Debian <em>(Jdeb)</em>
-</li>
-<li>Industrialisation des déploiements applicatifs basés sur les paquets Debian</li>
-<li>Industrialisation des configurations de plateforme</li>
-<li>Mise en place d'un processus de déploiement continu incluant un paramétrage spécifique de plateforme</li>
-<li>Mise en place d'une architecture de gestion de logs <em>(Logstash)</em>
-</li>
-<li>Mise en place d'une architecture de supervision des performances <em>(Munin)</em>
-</li>
-</ul><h3>
-<a name="r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me" class="anchor" href="#r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me"><span class="octicon octicon-link"></span></a>Référent intégration logicielle et système</h3>
-
-<ul>
-<li>Responsable de l'architecture Maven de l'ensemble des modules du projet</li>
-<li>Responsable de la qualité des versions du système (releases mensuelles)</li>
-<li>Support aux équipes de développement </li>
 </ul><h2>
 <a name="2010-thales-services--d%C3%A9monstrateur-ratp-3-mois" class="anchor" href="#2010-thales-services--d%C3%A9monstrateur-ratp-3-mois"><span class="octicon octicon-link"></span></a>2010 Thales Services – Démonstrateur RATP (3 mois)</h2>
 
@@ -105,7 +108,7 @@ aurelien.campergue@gmail.com
 <p><em>1 mission de développement, 2 missions d'administration système</em></p>
 
 <ul>
-<li>Développement démonstrateur RATP (3 mois)</li>
+<li>Développement démonstrateur RATP</li>
 <li>Déploiement et administration du serveur de développement (utilisé par une quinzaine de développeurs)</li>
 <li>Création de Masters de postes de développement
 <em>Linux Ubuntu 10.04 - 64 Bits, Linux CentOS 5.5, Eclipse 3.5 JEE, Java/JEE 1.6, VMWare ESXi, VCenter, GWT, SmartGWT, Hibernate, SLF4J, Logback, JDepend, PMD, Checkstyle, FindBugs, Junit, Emma</em>
@@ -114,7 +117,7 @@ aurelien.campergue@gmail.com
 <a name="2010-2009---thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines" class="anchor" href="#2010-2009---thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines"><span class="octicon octicon-link"></span></a>2010-2009   Thales Services – Projet Gesplan – Auditeur Qualité (2 semaines)</h3>
 
 <hr><ul>
-<li>Audit de qualité de l'application JEE Gesplan (5 jours)</li>
+<li>Audit de qualité de l'application JEE Gesplan</li>
 </ul><p><em>Java JEE 1.6, Spring 2.5, Struts2, Hibernate, Eclipse 3.5 JEE, Jdepend, PMD, Checkstyle, FindBugs, Junit, Emma</em></p>
 
 <h2>
