--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+
           <h1 id="project_title">Ingénieur DevOps</h1>
           <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
 
@@ -111,8 +113,8 @@ aurelien.campergue@gmail.com
 <li>Création de Masters de postes de développement
 <em>Linux Ubuntu 10.04 - 64 Bits, Linux CentOS 5.5, Eclipse 3.5 JEE, Java/JEE 1.6, VMWare ESXi, VCenter, GWT, SmartGWT, Hibernate, SLF4J, Logback, JDepend, PMD, Checkstyle, FindBugs, Junit, Emma</em>
 </li>
-</ul><h3>
-<a name="2010-2009---thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines" class="anchor" href="#2010-2009---thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines"><span class="octicon octicon-link"></span></a>2010-2009   Thales Services – Projet Gesplan – Auditeur Qualité (2 semaines)</h3>
+</ul><h2>
+<a name="2010-2009----thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines" class="anchor" href="#2010-2009----thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines"><span class="octicon octicon-link"></span></a>2010-2009    Thales Services – Projet Gesplan – Auditeur Qualité (2 semaines)</h2>
 
 <hr><ul>
 <li>Audit de qualité de l'application JEE Gesplan</li>
@@ -244,6 +246,15 @@ aurelien.campergue@gmail.com
 </ul>
       </section>
     </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
 
   </body>
 </html>
