Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+
           <h1 id="project_title">Ingénieur DevOps</h1>
           <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
 
@@ -36,7 +38,7 @@ aurelien.campergue@gmail.com
 <a name="exp%C3%A9rience-professionnelle" class="anchor" href="#exp%C3%A9rience-professionnelle"><span class="octicon octicon-link"></span></a>Expérience professionnelle</h1>
 
 <hr><h2>
-<a name="2014---2010--thales-services--projet-dune-42-mois" class="anchor" href="#2014---2010--thales-services--projet-dune-42-mois"><span class="octicon octicon-link"></span></a>2014 - 2010  Thales Services – Projet Dune (42 mois)</h2>
+<a name="2014---2010--thales-services--projet-dune" class="anchor" href="#2014---2010--thales-services--projet-dune"><span class="octicon octicon-link"></span></a>2014 - 2010  Thales Services – Projet Dune</h2>
 
 <hr><h3>
 <a name="r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me" class="anchor" href="#r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me"><span class="octicon octicon-link"></span></a>Référent intégration logicielle et système</h3>
@@ -98,7 +100,7 @@ aurelien.campergue@gmail.com
 <li>Inventaire de parc informatique automatisé <em>(OCS Inventory NG, GLPi)</em>
 </li>
 </ul><h2>
-<a name="2010-thales-services--d%C3%A9monstrateur-ratp-3-mois" class="anchor" href="#2010-thales-services--d%C3%A9monstrateur-ratp-3-mois"><span class="octicon octicon-link"></span></a>2010 Thales Services – Démonstrateur RATP (3 mois)</h2>
+<a name="2010-thales-services--d%C3%A9monstrateur-ratp" class="anchor" href="#2010-thales-services--d%C3%A9monstrateur-ratp"><span class="octicon octicon-link"></span></a>2010 Thales Services – Démonstrateur RATP</h2>
 
 <hr><h3>
 <a name="r%C3%A9f%C3%A9rent-technique-responsable-de-lint%C3%A9gration-continue-administrateur-syst%C3%A8me" class="anchor" href="#r%C3%A9f%C3%A9rent-technique-responsable-de-lint%C3%A9gration-continue-administrateur-syst%C3%A8me"><span class="octicon octicon-link"></span></a>Référent Technique, Responsable de l'intégration continue, Administrateur Système</h3>
@@ -112,7 +114,7 @@ aurelien.campergue@gmail.com
 <em>Linux Ubuntu 10.04 - 64 Bits, Linux CentOS 5.5, Eclipse 3.5 JEE, Java/JEE 1.6, VMWare ESXi, VCenter, GWT, SmartGWT, Hibernate, SLF4J, Logback, JDepend, PMD, Checkstyle, FindBugs, Junit, Emma</em>
 </li>
 </ul><h2>
-<a name="2010-2009----thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines" class="anchor" href="#2010-2009----thales-services--projet-gesplan--auditeur-qualit%C3%A9-2-semaines"><span class="octicon octicon-link"></span></a>2010-2009    Thales Services – Projet Gesplan – Auditeur Qualité (2 semaines)</h2>
+<a name="2010-thales-services--projet-gesplan--auditeur-qualit%C3%A9" class="anchor" href="#2010-thales-services--projet-gesplan--auditeur-qualit%C3%A9"><span class="octicon octicon-link"></span></a>2010 Thales Services – Projet Gesplan – Auditeur Qualité</h2>
 
 <hr><ul>
 <li>Audit de qualité de l'application JEE Gesplan</li>
@@ -244,6 +246,15 @@ aurelien.campergue@gmail.com
 </ul>
       </section>
     </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
 
   </body>
 </html>
