Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+
           <h1 id="project_title">Ingénieur DevOps</h1>
           <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
 
@@ -87,6 +89,8 @@ aurelien.campergue@gmail.com
 <li>Gestion de dépôts binaire <em>(Nexus)</em>
 </li>
 <li>Authentification centralisée <em>(OpenLDAP)</em>
+</li>
+<li>Sécurité et Réseau <em>(PFSense)</em>
 </li>
 </ul><h3>
 <a name="gestion-du-parc-des-postes-de-d%C3%A9veloppement" class="anchor" href="#gestion-du-parc-des-postes-de-d%C3%A9veloppement"><span class="octicon octicon-link"></span></a>Gestion du parc des postes de développement</h3>
@@ -244,6 +248,15 @@ aurelien.campergue@gmail.com
 </ul>
       </section>
     </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
 
   </body>
 </html>
