Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+
           <h1 id="project_title">Ingénieur DevOps</h1>
           <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
 
@@ -206,20 +208,20 @@ aurelien.campergue@gmail.com
 <hr>
 
 <ul>
-<li>Audit de qualité de l'application JEE Gesplan (5 jours)</li>
+<li>Audit de qualité de l'application JEE Gesplan</li>
 </ul>
 
 <p><em>Java JEE 1.6, Spring 2.5, Struts2, Hibernate, Eclipse 3.5 JEE, Jdepend, PMD, Checkstyle, FindBugs, Junit, Emma</em></p>
 
 <h2>
-<a id="2010-2009----thales-services--projet-danemark---référent-technique" class="anchor" href="#2010-2009----thales-services--projet-danemark---r%C3%A9f%C3%A9rent-technique" aria-hidden="true"><span class="octicon octicon-link"></span></a>2010-2009    Thales Services – Projet Danemark - Référent Technique</h2>
+<a id="2010-2009----thales-services--projet-danemark---référent-technique-6-mois" class="anchor" href="#2010-2009----thales-services--projet-danemark---r%C3%A9f%C3%A9rent-technique-6-mois" aria-hidden="true"><span class="octicon octicon-link"></span></a>2010-2009    Thales Services – Projet Danemark - Référent Technique (6 mois)</h2>
 
 <hr>
 
 <p><em>1 mission de développement, 2 missions d'administration système</em></p>
 
 <ul>
-<li>Développement d'une application de gestion des transports en commun (6 mois)</li>
+<li>Développement d'une application de gestion des transports en commun</li>
 <li>Création d'un Master de poste de développement</li>
 <li>Installation d'un serveur développement Linux Debian (5.0)</li>
 </ul>
@@ -313,6 +315,15 @@ aurelien.campergue@gmail.com
 </ul>
       </section>
     </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
 
   </body>
 </html>
