Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+
           <h1 id="project_title">Ingénieur DevOps</h1>
           <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
 
@@ -312,7 +314,16 @@ aurelien.campergue@gmail.com
 <li>Loisirs : Danses Swing, boxe française, skateboard</li>
 </ul>
       </section>
-    </div>   
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
 
   </body>
 </html>
