--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Ingénieur DevOps by acampergue</title>
+    <title>Ingénieur DevOps Engineer by acampergue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Ingénieur DevOps</h1>
-      <h2 class="project-tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
+      <h1 class="project-name">Ingénieur DevOps Engineer</h1>
+      <h2 class="project-tagline">Docker, Ansible, Linux, Java, Maven, Python, KVM</h2>
     </section>
 
     <section class="main-content">
